--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,7 @@
 # Django
 DJANGO_SECRET_KEY=change-me-in-production
 DJANGO_DEBUG=true
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,91.147.104.165
 DJANGO_LOG_LEVEL=INFO
 
 # Database
@@ -12,8 +12,8 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 # Redis & Celery
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://localhost:6377/0
+CELERY_RESULT_BACKEND=redis://localhost:6377/0
 
 # JWT
 JWT_ACCESS_MINUTES=30
@@ -21,6 +21,8 @@ JWT_REFRESH_DAYS=7
 
 # CORS
 CORS_ALLOW_ALL=true
+# Если CORS_ALLOW_ALL=false, укажите разрешенные домены через запятую:
+# CORS_ALLOWED_ORIGINS=http://localhost:3000,http://91.147.104.165:666,http://yourdomain.com
 
 # Trading System
 MARKET_DATA_UPDATE_INTERVAL=60
