--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,4 +12,7 @@ pandas==2.2.0
 numpy==1.26.3
 requests==2.31.0
 drf-spectacular==0.27.1
+# AI Agents dependencies
+scikit-learn>=1.3.0
+pyarrow>=10.0.0
 
