--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,11 @@ pandas==2.2.0
 numpy==1.26.3
 requests==2.31.0
 drf-spectacular==0.27.1
+websockets==12.0  # Для WebSocket подключений к Binance
 # AI Agents dependencies
 scikit-learn>=1.3.0
 pyarrow>=10.0.0
+# Optional: Advanced ML models (uncomment if needed)
+# xgboost>=2.0.0
+# lightgbm>=4.0.0
 
