--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       done &&
       python manage.py migrate &&
       python manage.py collectstatic --noinput &&
-      gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --access-logfile - --error-logfile - --log-level info"
+      gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 300 --access-logfile - --error-logfile - --log-level info"
     restart: unless-stopped
     env_file:
       - ./backend/.env
